# cmake_test

./: .gitignore  CMakeLists.txt  README.txt
doc/: CMakeLists.txt
include/: CMakeLists.txt  hello.h
lib/: CMakeLists.txt  hello.c
src/: CMakeLists.txt  main.c
