cmake_minimum_required(VERSION 2.8.6 FATAL_ERROR)
PROJECT (HELLO)
MESSAGE(STATUS "binary dir is" ${PROJECT_BINARY_DIR})
SET(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR}/install)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
ADD_SUBDIRECTORY(src bin)
ADD_SUBDIRECTORY(doc)

INSTALL(PROGRAMS runhello.sh
	DESTINATION bin)
