SET(LIBHELLO_SRC hello.c)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
ADD_LIBRARY(hello_dynamic SHARED ${LIBHELLO_SRC})
ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})

SET_TARGET_PROPERTIES(hello_dynamic PROPERTIES OUTPUT_NAME "hello")
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

INSTALL(TARGETS hello_dynamic
	LIBRARY DESTINATION lib
)
INSTALL(TARGETS hello_static
	ARCHIVE DESTINATION lib
)


