SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)

ADD_EXECUTABLE(hello main.c)
ADD_DEPENDENCIES(hello hello_static)
TARGET_LINK_LIBRARIES(hello libhello.a)

INSTALL(TARGETS hello
	RUNTIME DESTINATION bin
)
